<resources>
    <string name="app_name">PParcialCM2024</string>
    <string name="lbl_InicioSesion">Inicio de Sesión</string>
    <string name="lbl_AunRegistrado">¿Aún no estas registrado?</string>
    <string name="textViewTitulo">Registro de Usuario</string>
    <string name="textViewSexo">Sexo</string>
    <string name="textViewDeporte">Deporte Favorito</string>
    <string name="textViewGustos">Comida Favorita</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="rb1">Masculino</string>
    <string name="rb2">Femenino</string>
    <string name="check1">Fútbol</string>
    <string name="check2">Voley</string>
    <string name="btn_ingresar">Iniciar Sesión</string>
    <string name="btn_regresar">Regresar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_reiniciar">Reiniciar</string>
    <string name="lbl_registrarse">Registrarse Ahora!</string>
    <string name="IB">Información</string>

</resources>