<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:gravity="center|end"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/lblInicioSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_InicioSesion"
                android:textAlignment="center"
                android:textColor="@color/blueLogin"
                android:textSize="34sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/txt_usuario"
                    android:inputType="text"
                    android:maxLength="10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background"
                    tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="password_toggle">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtClave"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_enhanced_encryption_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/txt_contraseña"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background"
                    tools:ignore="VisualLintTextFieldSize,TextContrastCheck"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blueLogin"
                android:onClick="ingresar"
                android:text="@string/btn_ingresar"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                tools:ignore="VisualLintButtonSize" />

            </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/lblAunRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_AunRegistrado"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/lblRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:minHeight="48dp"
        android:onClick="enviarRegistrarse"
        android:text="@string/lbl_registrarse"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold" />
</LinearLayout>